prepare some changes

--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -27,7 +27,7 @@
       }
       .footer-social {
          display: flex;
-         justify-content: end;
+         justify-content: flex-end;
          ul {
             display: flex;
             justify-items: center;
