--- a/src/components/header/HeaderFull/HeaderFull.scss
+++ b/src/components/header/HeaderFull/HeaderFull.scss
@@ -4,7 +4,7 @@
   .back-image {
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     padding-right: 6rem;
     height: 270px;
     width: 100%;
