--- a/src/components/UI/Navbar/NavbarIcons/NavbarIcons.scss
+++ b/src/components/UI/Navbar/NavbarIcons/NavbarIcons.scss
@@ -4,23 +4,35 @@
    .item {
       margin-left: 15px;
    }
-   .dropdown {
-      .dropdown-toggle {
-         a {
-            font-size: 21px;
+   .cart {
+      .dropdown {
+         .dropdown-toggle {
+            a {
+               font-size: 21px;
+            }
+            &.dropdown-toggle::after {
+               display: none;
+            }
          }
-         &.dropdown-toggle::after {
-            display: none;
-         }
+      }
+      &:hover {
+       .dropdown {
+         display: block;
+       }  
       }
    }
    .cart {
       .dropdown-menu {
          width: 330px;
-         padding: 6px 15px;
-         right: 0;
+         padding: 0;
+         border: none;
+         right: -30px;
          .cart-box {
+            text-align: center;
+            box-shadow: 1px 4px 10px #575757;
+            border-radius: 4px;
             .cart-box-item {
+               padding: 2px 18px;
                display: flex !important;
                justify-content: space-between;
                align-items: center;
@@ -66,6 +78,7 @@
             }
             .cart-box-bottom {
                margin-top: 4px;
+               padding: 9px;
                .btn {
                   width: 48%;
                   border-radius: 0 !important;
