--- a/src/components/UI/Navbar/NavbarIcons/NavbarIcons.scss
+++ b/src/components/UI/Navbar/NavbarIcons/NavbarIcons.scss
@@ -2,97 +2,114 @@
    display: flex;
    align-items: center;
    .item {
-      margin-left: 15px;
+      margin-left: 17px;
    }
    .cart {
       .dropdown {
-         .dropdown-toggle {
-            a {
-               font-size: 21px;
+         display: inline-block;
+         position: relative;
+         .dropbtn {
+            position: relative;
+            cursor: pointer;
+            .badge {
+               position: absolute;
+               top: -10px;
+               right: -15px;
+            }
+            span {
+               font-size: 11px;
+               margin-left: 20px;
             }
             &.dropdown-toggle::after {
                display: none;
             }
          }
-      }
-      &:hover {
-       .dropdown {
-         display: block;
-       }  
-      }
-   }
-   .cart {
-      .dropdown-menu {
-         width: 330px;
-         padding: 0;
-         border: none;
-         right: -30px;
-         .cart-box {
-            text-align: center;
-            box-shadow: 1px 4px 10px #575757;
-            border-radius: 4px;
-            .cart-box-item {
-               padding: 2px 18px;
-               display: flex !important;
-               justify-content: space-between;
-               align-items: center;
-               border-bottom: 1px solid gray;
-               .cart-image {
-                  img {
-                     width: 80px;
-                  }
-                  .cart-title {
-                     font-size: 13px;
-                  }
-               }
-               .cart-number {
-                  font-size: 18px;
-                  font-weight: bold;
-                  display: flex;
+         .drop-content {
+            position: absolute;
+            text-align: right;
+            display: none;
+            background-color: #fff;
+            width: 340px;
+            padding: 0;
+            border: none;
+            right: -30px;
+            transition: 0.2s;
+            .cart-box {
+               max-height: 510px;
+               overflow: scroll;
+               overflow-x: hidden;
+               text-align: center;
+               box-shadow: 1px 4px 10px #575757;
+               border-radius: 6px;
+               .cart-box-item {
+                  padding: 2px 18px;
+                  display: flex !important;
+                  justify-content: space-between;
                   align-items: center;
-                  .line {
-                     margin: 0 5px;
+                  border-bottom: 1px solid gray;
+                  .cart-image {
+                     img {
+                        width: 80px;
+                     }
+                     .cart-title {
+                        font-size: 13px;
+                     }
                   }
-                  span {
-                     vertical-align: middle;
-                  }
-                  a {
-                     display: block;
-                     text-align: center;
-                     width: 30px;
-                     height: 30px;
-                     border-radius: 50%;
-                     background-color: #505050;
-                     color: #fff !important;
-                  }
-               }
-               .cart-remove {
-                  .btn-remove {
-                     font-size: 11px !important;
+                  .cart-number {
+                     font-size: 18px;
                      font-weight: bold;
-                     border: 1px solid red !important;
-                     background-color: #fff;
-                     color: red;
+                     display: flex;
+                     align-items: center;
+                     .line {
+                        margin: 0 5px;
+                     }
+                     span {
+                        vertical-align: middle;
+                     }
+                     a {
+                        display: block;
+                        text-align: center;
+                        width: 30px;
+                        height: 30px;
+                        border-radius: 50%;
+                        background-color: #505050;
+                        color: #fff !important;
+                     }
+                  }
+                  .cart-remove {
+                     .btn-remove {
+                        font-size: 11px !important;
+                        font-weight: bold;
+                        border: 1px solid red !important;
+                        background-color: #fff;
+                        color: red;
+                     }
                   }
                }
-            }
-            .cart-box-bottom {
-               margin-top: 4px;
-               padding: 9px;
-               .btn {
-                  width: 48%;
-                  border-radius: 0 !important;
-                  font-size: 13px !important;
-                  &.btn-clear {
-                     margin-left: 3px;
+               .cart-box-bottom {
+                  display: block;
+                  position: absolute;
+                  bottom: -40px;
+                  background: #ede6e6;
+                  width: 100%;
+                  margin-top: 4px;
+                  padding: 9px;
+                  .btn {
+                     width: 48%;
+                     border-radius: 0 !important;
+                     font-size: 13px !important;
+                     &.btn-clear {
+                        margin-left: 3px;
+                     }
                   }
                }
             }
          }
+         &:hover {
+            .drop-content {
+              display: block;
+            }  
+         }
       }
    }
-}
-
-.dropdown-menu {
-   text-align: right;
 }
