--- a/src/containers/Product/Main/ProductMain/ProductMain.scss
+++ b/src/containers/Product/Main/ProductMain/ProductMain.scss
@@ -34,5 +34,9 @@
       margin-top: 0.6rem;
       border-radius: 5px !important;
       margin-left: 10px;
+      i {
+         margin-right: 7px;
+         transform: translateY(1px);
+      }
    }
 }
