--- a/src/components/UI/Navbar/NavbarIcons/NavbarIcons.scss
+++ b/src/components/UI/Navbar/NavbarIcons/NavbarIcons.scss
@@ -2,7 +2,10 @@
    display: flex;
    align-items: center;
    .item {
-      margin-left: 17px;
+      a {
+         margin-left: 25px;
+         cursor: pointer;
+      }
    }
    .cart {
       .dropdown {
@@ -116,6 +119,7 @@
                   }
                   .total-price {
                      p {
+                        margin-left: 6px;
                         margin-bottom: 0;
                         font-size: 14px;
                      }
