--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,17 @@
    src: url('../src/assets/fonts/IRANYekanLight.ttf');
 }
 
+.container {
+   .breadcrumb {
+      justify-content: end;
+      padding-bottom: 16px;
+      border-bottom: 1px solid #dfdfdf;
+      .breadcrumb-item {
+         font-size: 14px;
+      }
+   }
+}
+
 * {
    font-family: 'iranyekan';
 }
