cart products bug fixed

--- a/src/containers/Shop/Main/Products/Product/Product.scss
+++ b/src/containers/Shop/Main/Products/Product/Product.scss
@@ -3,7 +3,7 @@
       .col-md-3 {
          margin-top: 1.5rem;
       }
-      .card {
+      .card-pro {
          padding: 10px;
          &:hover {
             filter: drop-shadow(0 1px 4px rgba(0,0,0,.2));
