--- a/src/components/UI/Loading/Loading.scss
+++ b/src/components/UI/Loading/Loading.scss
@@ -2,9 +2,9 @@
    display: flex;
    justify-content: center;
    align-items: center;
-   position: absolute;
+   position: fixed;
    width: 100%;
-   height: 100vh;
+   height: 100%;
    z-index: 999999999;
    left: 0;
    top: 0;
